--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,13 +43,13 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Price"
+        android:text="Order Summary"
         android:textAllCaps="true"
         android:paddingTop="16dp"
         android:paddingBottom="16dp"
         />
     <TextView
-        android:id="@+id/price_text_view"
+        android:id="@+id/order_summary_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="$0"
